// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyEmail component should disable the send button while sending 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <p>
        Start sending email from this domain by sending a verification email to one of the addresses below.
      </p>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              postmaster@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              submitting={true}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              abuse@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              submitting={true}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`VerifyEmail component should error if custom mailbox field is invalid 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <Stack>
        <p>
          Start sending email from this domain by sending a verification email to any mailbox on your domain using the form below.
        </p>
        <Grid>
          <Grid.Column
            xs={6}
          >
            <div>
              <TextField
                connectRight={
                  <strong
                    className="Domain"
                  >
                    @xyz.com
                  </strong>
                }
                error="Required"
                id="localPart"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </div>
          </Grid.Column>
        </Grid>
      </Stack>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <VerifyButton
        onClick={[Function]}
      />
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`VerifyEmail component should render success message 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <p>
        Start sending email from this domain by sending a verification email to one of the addresses below.
      </p>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              postmaster@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              abuse@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`VerifyEmail component should render with mailbox verification 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <Stack>
        <p>
          Start sending email from this domain by sending a verification email to any mailbox on your domain using the form below.
        </p>
        <Grid>
          <Grid.Column
            xs={6}
          >
            <div>
              <TextField
                connectRight={
                  <strong
                    className="Domain"
                  >
                    @xyz.com
                  </strong>
                }
                id="localPart"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </div>
          </Grid.Column>
        </Grid>
      </Stack>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <VerifyButton
        onClick={[Function]}
      />
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`VerifyEmail component should render with postmaster and abuse email verification 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <p>
        Start sending email from this domain by sending a verification email to one of the addresses below.
      </p>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              postmaster@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              abuse@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`VerifyEmail component should send abuse-at email 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <p>
        Start sending email from this domain by sending a verification email to one of the addresses below.
      </p>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              postmaster@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              abuse@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`VerifyEmail component should send custom mailbox email 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <Stack>
        <p>
          Start sending email from this domain by sending a verification email to any mailbox on your domain using the form below.
        </p>
        <Grid>
          <Grid.Column
            xs={6}
          >
            <div>
              <TextField
                connectRight={
                  <strong
                    className="Domain"
                  >
                    @xyz.com
                  </strong>
                }
                id="localPart"
                onBlur={[Function]}
                onChange={[Function]}
                value="krombopulos.michael"
              />
            </div>
          </Grid.Column>
        </Grid>
      </Stack>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <VerifyButton
        onClick={[Function]}
      />
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`VerifyEmail component should send postmaster-at email 1`] = `
<Modal.LEGACY
  showCloseButton={true}
>
  <Panel.LEGACY
    title="Verify through Email"
  >
    <Panel.LEGACY.Section>
      <p>
        Start sending email from this domain by sending a verification email to one of the addresses below.
      </p>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              postmaster@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid
        middle="xs"
      >
        <Grid.Column
          xs={6}
        >
          <p>
            <strong>
              abuse@xyz.com
            </strong>
          </p>
        </Grid.Column>
        <Grid.Column
          xs={6}
        >
          <styled.div>
            <VerifyButton
              onClick={[Function]}
              variant="secondary"
            />
          </styled.div>
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</Modal.LEGACY>
`;
